unpackaged/main/default/objects/Services_Forecast__c/Services_Forecast__c.object-meta.xml
<CustomObject>
    <label>Services Forecast</label>
    <nameField>
        <displayFormat>SF-{000000}</displayFormat>
        <label>Services Forecast No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services Forecast</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>