unpackaged/main/default/objects/Services_Forecast__c/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Forecast %</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>