unpackaged/main/default/objects/Services_Forecast__c/validationRules/Forecast_Percentage_Over_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Forecast_Percentage_Over_Zero</fullName>
    <active>true</active>
    <description>Forecast Percentage must be over 0</description>
    <errorConditionFormula>Forecast__c &lt;=0</errorConditionFormula>
    <errorDisplayField>Forecast__c</errorDisplayField>
    <errorMessage>The Forecast percentage must be over 0</errorMessage>
</ValidationRule>